--- a/OmdbApiProject/packages.config
+++ b/OmdbApiProject/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.7" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="3.2.0" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="16.6.255" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Threading" version="16.6.13" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="16.6.13" targetFramework="net472" />
@@ -9,7 +11,12 @@
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.ComponentModel.Composition" version="4.5.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.113.5" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.5" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net472" />
